--- a/Project.toml
+++ b/Project.toml
@@ -12,5 +12,5 @@ Oceananigans = "9e8cae18-63c1-5223-a75c-80ca9d6e9a09"
 
 [compat]
 JLD2 = "0.4"
-OceanBioME = "0.4, 0.5, 0.6, 0.7"
+OceanBioME = "0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.10"
 Oceananigans = "0.85, 0.86, 0.87, 0.88, 0.89, 0.90, 0.91"
